--- a/index.html
+++ b/index.html
@@ -47,6 +47,13 @@
               </li>
               <li>
                 <a
+                  href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley"
+                  class="icon brands fa-twitter"
+                  ><span class="label">Github</span></a
+                >
+              </li>
+              <li>
+                <a
                   href="mailto: ianlai0327@gmail.com"
                   class="icon solid fa-envelope"
                   ><span class="label">Email</span></a
