--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
   <head>
-    <title>Aerial by HTML5 UP</title>
+    <title>This is Ian Lai's website</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -27,7 +27,7 @@
           <h1>Ian Lai</h1>
           <p>
             Current Freshman at NTUEE &nbsp;&bull;&nbsp; Born in 2002
-            &nbsp;&bull;&nbsp; Lulalaは完璧なgithub名です
+            &nbsp;&bull;&nbsp; Το Lulala είναι το τέλειο όνομα github
           </p>
           <nav>
             <ul>
@@ -49,7 +49,7 @@
                 <a
                   href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley"
                   class="icon brands fa-twitter"
-                  ><span class="label">Github</span></a
+                  ><span class="label">twitter?</span></a
                 >
               </li>
               <li>
@@ -66,9 +66,9 @@
         <!-- Footer -->
         <footer id="footer">
           <span class="copyright"
-            >&copy; هذه هي قناة اليوتيوب الخاصة بصديقي اليوتيوب شاو مين. Design:
+            >&copy; هذه هي قناة اليوتيوب الخاصة بصديقي اليوتيوب شاو مين.
             <a href="https://www.youtube.com/channel/UCvt1H3l_HgDwFFgQ2JE7Z8Q"
-              >ShaoMing EE</a
+              >شاومينج إي</a
             >.</span
           >
         </footer>
